redis-feature: полностью реализовано кеширование списка товаров
