# redis-service/src/main/resources/openapi/cache-spec.yaml
@@ -1,7 +1,7 @@
 openapi: 3.1.0
 info:
   title: Сервис кеширования товаров
-  description: Сервис, отвечающий за кеширование отдельных товаров и списков товаров
+  description: Сервис, отвечающий за кеширование отдельных товаров и списков товаров (главной страницы)
   version: 1.0.0
 servers:
   - url: http://localhost:8081
@@ -67,34 +67,29 @@ paths:
             application/json; charset=utf-8:
               schema:
                 $ref: '#/components/schemas/CachedItem'
-        '404':
+        '204':
           description: Данные по товару в кеше не найдены
-          content:
-            application/json; charset=utf-8:
-              schema:
-                $ref: './payment-spec.yaml#/components/schemas/ErrorRs'
         '500':
           description: Внутренняя ошибка сервера
           content:
             application/json; charset=utf-8:
               schema:
                 $ref: './payment-spec.yaml#/components/schemas/ErrorRs'
-  /cache/order/{orderId}/items:
+
+  /cache/main/items:
     post:
-      summary: Сохранить список товаров заказа в кеш
-      operationId: cacheOrderItems
+      summary: Сохранить список товаров главной страницы в кеш
+      operationId: cacheMainItems
       parameters:
-        - name: orderId
-          in: path
-          required: true
-          description: ID заказа
-          schema:
-            type: integer
-            format: int64
+        - $ref: '#/components/parameters/SearchParam'
+        - $ref: '#/components/parameters/SortParam'
+        - $ref: '#/components/parameters/PageSizeParam'
+        - $ref: '#/components/parameters/PageNumberParam'
       tags:
         - cache
       requestBody:
         required: true
+        description: Список товаров, которые сохраняем в кеш
         content:
           application/json; charset=utf-8:
             schema:
@@ -122,33 +117,26 @@ paths:
                 $ref: './payment-spec.yaml#/components/schemas/ErrorRs'
 
     get:
-      summary: Получить список товаров из кеша по ID заказа
-      operationId: getItemsByOrderId
+      summary: Получить список товаров из кеша по параметрам запроса
+      operationId: getMainItemsByParams
       parameters:
-        - name: orderId
-          in: path
-          required: true
-          description: ID заказа
-          schema:
-            type: integer
-            format: int64
+        - $ref: '#/components/parameters/SearchParam'
+        - $ref: '#/components/parameters/SortParam'
+        - $ref: '#/components/parameters/PageSizeParam'
+        - $ref: '#/components/parameters/PageNumberParam'
       tags:
         - cache
       responses:
         '200':
-          description: Товар найден
+          description: Список товаров
           content:
             application/json; charset=utf-8:
               schema:
                 type: array
                 items:
                   $ref: '#/components/schemas/CachedItem'
-        '404':
+        '204':
           description: Данные по товару в кеше не найдены
-          content:
-            application/json; charset=utf-8:
-              schema:
-                $ref: './payment-spec.yaml#/components/schemas/ErrorRs'
         '500':
           description: Внутренняя ошибка сервера
           content:
@@ -198,4 +186,55 @@ components:
           description: Статус сохранения объекта в кеш
           type: boolean
           example: true
-
+    SortEnum:
+      type: string
+      description: |
+        Возможные варианты сортировки:
+        * `NONE` — без сортировки
+        * `ALPHA` — по алфавиту
+        * `PRICE_ASC` — по возрастанию цены
+        * `PRICE_DESC` — по убыванию цены
+      enum:
+        - NONE
+        - ALPHA
+        - PRICE_ASC
+        - PRICE_DESC
+      default: "NONE"
+      example: "NONE"
+  parameters:
+    SearchParam:
+      name: search
+      in: query
+      description: Строка поиска товаров
+      required: false
+      schema:
+        type: string
+        maxLength: 20
+        default: ""
+        example: Майка
+    SortParam:
+      name: sort
+      in: query
+      description: Параметр сортировки
+      required: false
+      schema:
+        $ref: '#/components/schemas/SortEnum'
+    PageSizeParam:
+      name: pageSize
+      in: query
+      description: Количество товаров на странице
+      required: false
+      schema:
+        type: integer
+        minimum: 1
+        maximum: 100
+        default: 10
+    PageNumberParam:
+      name: pageNumber
+      in: query
+      description: Номер страницы (начиная с 0)
+      required: false
+      schema:
+        type: integer
+        minimum: 0
+        default: 0
