# shop/src/main/java/com/shop/easybuy/common/entity/SortEnum.java
@@ -5,7 +5,7 @@ import org.springframework.data.domain.Sort;
 
 @Getter
 public enum SortEnum {
-    NO(Sort.unsorted()),
+    NONE(Sort.unsorted()),
     ALPHA(Sort.by("title")),
     PRICE_ASC(Sort.by(Sort.Direction.ASC, "price")),
     PRICE_DESC(Sort.by(Sort.Direction.DESC, "price"));
